# hello-python

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
hello_python/: app.py
hello_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hello_python/db/: db.py  models.py
hello_python/resources/: movie.py
